--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "displayName": "Eero Presence",
-  "name": "@apexskier/homebridge-eero-presence",
-  "version": "1.2.0",
-  "description": "Use your Eero mesh as an occupancy sensor",
+  "displayName": "Smart Envi",
+  "name": "@apexskier/homebridge-smart-envi",
+  "version": "1.0.0",
+  "description": "Control the Eheat Smart Envi heater in homebridge.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/apexskier/homebridge-eero-presence.git"
+    "url": "git+https://github.com/apexskier/homebridge-smart-envi.git"
   },
   "bugs": {
-    "url": "https://github.com/apexskier/homebridge-eero-presence/issues"
+    "url": "https://github.com/apexskier/homebridge-smart-envi/issues"
   },
   "funding": [
     {
@@ -34,6 +34,7 @@
     "homebridge-plugin"
   ],
   "devDependencies": {
+    "@types/color-convert": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.45.0",
@@ -44,5 +45,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "color-convert": "^2.0.1"
   }
 }
