theoretical F/C unit and night light control

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
       "request": "launch",
       "program": "${workspaceFolder}/index.js",
       "env": {
-        "USER_TOKEN": ""
+        "USERNAME": "",
+        "PASSWORD": ""
       }
     }
   ]
