Remove unused file from fork

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "fix": "prettier --write . && eslint src/**.ts --fix",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepare": "npm run lint && npm run build",
-    "auth": "node auth.js"
+    "prepare": "npm run lint && npm run build"
   },
   "keywords": [
     "homebridge-plugin"
