--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "engines": {
     "node": "^18.17.0 || ^20.9.0",
-    "homebridge": "^1.6.0"
+    "homebridge": "^1.6.0 || ^2.0.0-beta.0"
   },
   "main": "dist/index.js",
   "scripts": {
